# AllTheHaxx

./: .gitignore  .gitmodules  .pullapprove.yml  ATHManual.odt  CMakeLists.txt  LuaManual.odt  README.md  autoexec_server.cfg  bam.lua  cache.svl  circle.yml  compare.json  config.lua  configure.lua  data.db  data.db-journal  license.txt  lua_documentation.lua  req_analysis.py  todo.txt  update.json
cmake/: FindLuaJIT.cmake
data/audio/: irc_message.wv
data/edtc/: mapdbs.cfg  skindbs.cfg  storage.cfg
data/languages/: belarusian.txt  bosnian.txt  brazilian_portuguese.txt  bulgarian.txt  catalan.txt  chuvash.txt  czech.txt  danish.txt  dutch.txt  finnish.txt  french.txt  german.txt  greek.txt  hungarian.txt  italian.txt  japanese.txt  korean.txt  kyrgyz.txt  norwegian.txt  persian.txt  polish.txt  portuguese.txt  romanian.txt  russian.txt  serbian.txt  simplified_chinese.txt  slovak.txt  spanish.txt  swedish.txt  traditional_chinese.txt  turkish.txt  ukrainian.txt
data/languages/scripts/: analyze.py  copy_fix.py  readme.txt
data/lua/.library/: algorithm.lua  broadcast.lua  config.lua  containers.lua  debug.lua  general.lua  infoboxes.lua  logger.lua  luac.lua  math.lua  queue.lua  sound.lua  sprites.lua  stringutils.lua  tune.lua  twdata.lua  twutils.lua  types.lua  ui.lua
data/lua/Official/: Breadcrumb.lua  Calc.lua  FlappyBird.lua  Highlightee.lua  Moba-HUD.lua  chatvote.lua  clippingtest.lua  drag'n'drop.lua
data/luabase/: events.clc  events.lua
data/luacerts/data/luabase/: events.cert
data/luares/damageind/: rimblink.xcf
data/maps/: blmapV3ROYAL.map  urls.cfg
data/shaders/: passthrough.frag  passthrough.vert  test.fsh  test.vsh
data/skins/: urls.cfg
datasrc/: compile.py  content.py  network.py
docs/ath/: ATHManual.odt
lua/: AvoidFreeze.lua  Balance.lua  BloodPatch.lua  Calc.lua  ChatLog.lua  DisableDmgAll.lua  EmoteChatBot.lua  FireMacro.lua  GraphicsTest.lua  GreetBot.lua  GreetBot2.lua  GuessingGame.lua  Jump.lua  SuperMegaTestScript.config  SuperMegaTestScript.lua  Test.lua  Test1.lua  Test2.lua  balance.lua  bloodpatch.lua  fly.lua  info.txt  walkbot.lua
lua/include/: playerctrl.lua
lua/main/: events.lua  init.lua
other/: AllTheHaxx-StealthMode.bat  AllTheHaxx.desktop
other/curl/: VERSION  curl.lua
other/curl/include/: curl_config.h
other/glew/: glew.lua
other/glew/glew-1.13.0/: glew.pc  glewmx.pc
other/glew/glew-1.13.0/lib/: libGLEWmx.so.1.13.0
other/glew/lib/: libGLEW.so.1.13.0
other/icons/: AllTheHaxx.rc  teeworlds_cl.rc
other/luajit/: luajit.lua
other/luajit/LuaJIT-2.0.2/src/: luajit
other/luajit/include/: lua.h  luaconf.h
other/luajit/unix/: important.txt
other/luajit/win32/: lua51.exp
other/luajit/windows/lib32/: lua51.lib
other/opus/windows/lib32/: libjpeg.lib  ssleay32.lib
other/sdl/: sdl.lua
scripts/: git_hash.py  make_callstack_creators.py  make_release.py
src/base/: color.h  debug.c  debug.h  math.h  matmath.h  system++.cpp  system++.h  system.c  system.h  vmath.h
src/base/system++/: io.cpp  io.h  linked_list.h  pool.h  system++.cpp  system++.h  threading.h
src/base/tl/: algorithm.h  allocator.h  array.h  base.h  sorted_array.h
src/datacollector/: datacollector.cpp
src/engine/: client.h  config.h  console.h  curlwrapper.h  demo.h  engine.h  fetcher.h  graphics.h  input.h  irc.h  map.h  serverbrowser.h  sound.h  storage.h  textrender.h  updater.h
src/engine/client/: backend_sdl.cpp  backend_sdl.h  client.cpp  client.h  curlwrapper.cpp  curlwrapper.h  data_updater.cpp  data_updater.h  db_sqlite3.cpp  db_sqlite3.h  debug.cpp  debug.h  fetcher.cpp  fetcher.h  friends.cpp  graphics.cpp  graphics.cppX  graphics.h  graphics_threaded.cpp  graphics_threaded.h  input.cpp  input.h  irc.cpp  irc.h  lua.cpp  lua.h  lua_apidef.cpp  luabinding.cpp  luabinding.h  luafile.cpp  luafile.h  luaresman.cpp  luaresman.h  luaresmandef.h  mapdownload.cpp  mapdownload.h  serverbrowser.cpp  serverbrowser.h  shader.cpp  shader.h  (+6 more)
src/engine/client/lua/: luacolor.cpp  luacolor.h  luajson.cpp  luajson.h  luasql.cpp  luasql.h
src/engine/client/shaders/: blur.fs  blur.vs  color.fs  color.vs  grayscale.fs  grayscale.vs  hexagon - Kopie.fs  hexagon - Kopie.vs  hexagon.fs  hexagon.vs  light.fs  light.vs  motionblur.fs  motionblur.vs  negative.fs  negative.vs  post.fs  post.vs  relief_bw.fs  relief_bw.vs  sepia.fs  sepia.vs  stereoscope.fs  stereoscope.vs  toon_bw.fs  toon_bw.vs
src/engine/server/: authmanager.cpp  server.cpp  server.h
src/engine/shared/: config.cpp  config.h  config_variables.h  console.cpp  console.h  datafile.cpp  datafile.h  demo.cpp  demo.h  econ.cpp  engine.cpp  filecollection.cpp  filecollection.h  jobs.cpp  jobs.h  kernel.cpp  lua.cpp  lua.h  lua_entity.cpp  lua_entity.h  lua_protocol.cpp  lua_protocol.h  lua_vec.cpp  lua_vec.h  map.cpp  mapchecker.cpp  mapchecker.h  masterserver.cpp  netban.cpp  netban.h  network.cpp  network.h  network_client.cpp  network_conn.cpp  network_console_conn.cpp  network_server.cpp  packer.cpp  protocol.h  protocol_ex.cpp  protocol_ex_msgs.h  (+7 more)
src/game/: collision.cpp  collision.h  gamecore.cpp  gamecore.h  layers.cpp  layers.h  localization.cpp  localization.h  mapitems.h  teamscore.cpp  teamscore.h  variables.h  version.h
src/game/client/: component.h  gameclient.cpp  gameclient.h  lineinput.cpp  lineinput.h  lua.cpp  lua.h  render.cpp  render.h  render_map.cpp  ui.cpp  ui.h
src/game/client/components/: astar.cpp  astar.h  background.cpp  binds.cpp  binds.h  broadcast.cpp  camera.cpp  camera.h  chat.cpp  chat.h  console.cpp  console.h  controls.cpp  controls.h  countryflags.cpp  countryflags.h  cskins.cpp  cskins.h  debughud.cpp  drawing.cpp  drawing.h  hud.cpp  (+67 more)
src/game/editor/: auto_map.cpp  editor.cpp  editor.h  io.cpp  popups.cpp
src/game/server/: ddracechat.cpp  gamecontext.cpp  gamecontroller.cpp  player.h
src/mastersrv/: mastersrv.cpp
src/testing/: test_pool.cpp
src/tools/: cdns.cpp  colorcode.c  config_common.h  config_retrieve.cpp  config_store.cpp  dummy_map.cpp  map_resave.cpp  map_version.cpp  slc_unpack.cpp
src/versionsrv/: versionsrv.h
(+24 files in other folders)
